; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_....png.c_png_icc_set_sRGB.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_....png.c_png_icc_set_sRGB.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @png_icc_set_sRGB(i32 %0, i32 %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i64, i64* %7, align 8
  %11 = load i32, i32* %8, align 4
  %12 = call i64 @png_compare_ICC_profile_with_sRGB(i32 %9, i64 %10, i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %22

14:                                               ; preds = %4
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load i64, i64* %7, align 8
  %18 = add nsw i64 %17, 64
  %19 = call i64 @png_get_uint_32(i64 %18)
  %20 = trunc i64 %19 to i32
  %21 = call i32 @png_colorspace_set_sRGB(i32 %15, i32 %16, i32 %20)
  br label %22

22:                                               ; preds = %14, %4
  ret void
}

declare dso_local i64 @png_compare_ICC_profile_with_sRGB(i32, i64, i32) #1

declare dso_local i32 @png_colorspace_set_sRGB(i32, i32, i32) #1

declare dso_local i64 @png_get_uint_32(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
